# src/routes/doc.swagger.json
@@ -21,48 +21,76 @@
   "paths": {
     "/usuario/": {
       "post": {
+        "tags": [
+          "Usuário"
+        ],
         "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "description": "Adiciona um novo Usuário",
             "schema": {
               "type": "object",
               "properties": {
                 "nome": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Novo Usuário"
                 },
                 "cpf": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "03834285120"
                 },
                 "sexo": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "masculino"
                 },
                 "cep": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "88117410"
                 },
                 "rua": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Rua dos Maracujás"
                 },
                 "bairro": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Açaí"
                 },
                 "cidade": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Florianópolis"
                 },
                 "uf": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "SC"
                 },
                 "dataNascimento": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "1996-12-15"
                 },
                 "email": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "usuario123@gmail.com"
                 },
                 "password": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "senha123456"
                 }
-              }
+              },
+              "required": [
+                "nome",
+                "cpf",
+                "sexo",
+                "cep",
+                "rua",
+                "bairro",
+                "cidade",
+                "uf",
+                "dataNascimento",
+                "email",
+                "password"
+              ]
             }
           }
         ],
@@ -84,6 +112,9 @@
     },
     "/usuario/ativos": {
       "get": {
+        "tags": [
+          "Usuário"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -97,21 +128,31 @@
     },
     "/login/": {
       "post": {
+        "tags": [
+          "Login"
+        ],
         "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "description": "Realiza o login no sistema.",
             "schema": {
               "type": "object",
               "properties": {
                 "email": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "teste@gmail.com"
                 },
                 "password": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "senha123456"
                 }
-              }
+              },
+              "required": [
+                "email",
+                "password"
+              ]
             }
           }
         ],
@@ -133,6 +174,9 @@
     },
     "/local/": {
       "post": {
+        "tags": [
+          "Local"
+        ],
         "description": "",
         "parameters": [
           {
@@ -143,40 +187,63 @@
           {
             "name": "body",
             "in": "body",
+            "description": "Adiciona um novo local",
             "schema": {
               "type": "object",
               "properties": {
                 "nome": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Jardim Botânico de Florianópolis"
                 },
                 "descricao": {
-                  "example": "any"
-                },
-                "rua": {
-                  "example": "any"
-                },
-                "cidade": {
-                  "example": "any"
-                },
-                "bairro": {
-                  "example": "any"
-                },
-                "uf": {
-                  "example": "any"
-                },
-                "latitude": {
-                  "example": "any"
-                },
-                "longitude": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Lugar cheio de natureza e excelente para fazer um piquinique"
                 },
                 "cep": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "88015200"
+                },
+                "rua": {
+                  "type": "string",
+                  "example": "Rua A"
+                },
+                "cidade": {
+                  "type": "string",
+                  "example": "Florianópolis"
+                },
+                "bairro": {
+                  "type": "string",
+                  "example": "Itacorubi"
+                },
+                "uf": {
+                  "type": "string",
+                  "example": "SC"
+                },
+                "latitude": {
+                  "type": "string",
+                  "example": "-47.123123"
+                },
+                "longitude": {
+                  "type": "string",
+                  "example": "-90.123123"
                 },
                 "usuarios_id": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "14"
                 }
-              }
+              },
+              "required": [
+                "nome",
+                "descricao",
+                "cep",
+                "rua",
+                "cidade",
+                "bairro",
+                "uf",
+                "latitude",
+                "longitude",
+                "usuarios_id"
+              ]
             }
           }
         ],
@@ -196,12 +263,21 @@
         }
       },
       "get": {
+        "tags": [
+          "Local"
+        ],
         "description": "",
         "parameters": [
           {
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "parameterName",
+            "in": "query",
+            "description": "Lista Locais com base no ID do usuário logado.",
+            "type": "number"
           }
         ],
         "responses": {
@@ -216,7 +292,18 @@
     },
     "/local/all": {
       "get": {
+        "tags": [
+          "Local"
+        ],
         "description": "",
+        "parameters": [
+          {
+            "name": "parameterName",
+            "in": "query",
+            "description": "Lista todos os locais cadastrados.",
+            "type": "number"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -229,13 +316,17 @@
     },
     "/local/{id}": {
       "get": {
+        "tags": [
+          "Local"
+        ],
         "description": "",
         "parameters": [
           {
             "name": "id",
-            "in": "path",
+            "in": "query",
             "required": true,
-            "type": "string"
+            "type": "number",
+            "description": "Filtrar local"
           },
           {
             "name": "authorization",
@@ -247,24 +338,28 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       }
     },
     "/local/{local_id}": {
       "put": {
+        "tags": [
+          "Local"
+        ],
         "description": "",
         "parameters": [
           {
             "name": "local_id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "number",
+            "description": "Pega o Id do local no banco de dados."
           },
           {
             "name": "authorization",
@@ -274,37 +369,58 @@
           {
             "name": "body",
             "in": "body",
+            "description": "Atualiza um local cadastrado.",
             "schema": {
               "type": "object",
               "properties": {
                 "nome": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Jardim Botânico de Florianópolis"
                 },
                 "descricao": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Lugar cheio de natureza e excelente para fazer um piquinique e levar crianças para passear"
                 },
                 "rua": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Rua A"
                 },
                 "cidade": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Florianópolis"
                 },
                 "bairro": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Itacorubi"
                 },
                 "uf": {
-                  "example": "any"
-                },
-                "cep": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "SC"
                 },
                 "latitude": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "-47.123123"
                 },
                 "longitude": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "-90.123123"
+                },
+                "cep": {
+                  "type": "string",
+                  "example": "88015200"
                 }
-              }
+              },
+              "required": [
+                "nome",
+                "descricao",
+                "rua",
+                "cidade",
+                "bairro",
+                "uf",
+                "latitude",
+                "longitude",
+                "cep"
+              ]
             }
           }
         ],
@@ -312,22 +428,26 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       },
       "delete": {
+        "tags": [
+          "Local"
+        ],
         "description": "",
         "parameters": [
           {
             "name": "local_id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "number",
+            "description": "Deleta o local do banco de dados."
           },
           {
             "name": "authorization",
@@ -339,24 +459,28 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       }
     },
     "/local/{local_id}/maps": {
       "get": {
+        "tags": [
+          "Link Maps"
+        ],
         "description": "",
         "parameters": [
           {
             "name": "local_id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "number",
+            "description": "Gera o link para o Google Maps"
           },
           {
             "name": "authorization",
